--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ rt = ["atmega168-hal/rt"]
 [dependencies]
 panic-halt = "0.2.0"
 nb = "0.1.3"
+ufmt = "0.1.0"
 
 [dependencies.atmega168-hal]
 git = "https://github.com/Rahix/avr-hal"
